@@ -742,6 +742,7 @@ int grab_macrox_value_r(nagios_macros *mac, int macro_type, char *arg1, char *ar
 		case MACRO_HOSTIMPORTANCE:
 		case MACRO_HOSTANDSERVICESIMPORTANCE:
 		case MACRO_HOSTNOTIFICATIONENABLED:
+		case MACRO_HOSTNOTIFICATIONPERIOD:
 
 			/* a standard host macro */
 			if(arg2 == NULL) {
@@ -877,6 +878,7 @@ int grab_macrox_value_r(nagios_macros *mac, int macro_type, char *arg1, char *ar
 		case MACRO_LASTSERVICESTATEID:
 		case MACRO_SERVICEIMPORTANCE:
 		case MACRO_SERVICENOTIFICATIONENABLED:
+		case MACRO_SERVICENOTIFICATIONPERIOD:
 
 			/* use saved service pointer */
 			if(arg1 == NULL && arg2 == NULL) {
@@ -1725,6 +1727,9 @@ int grab_standard_host_macro_r(nagios_macros *mac, int macro_type, host *temp_ho
 		case MACRO_HOSTNOTIFICATIONENABLED:
 			*output = (char *)mkstr("%s", temp_host->notifications_enabled ? "YES" : "NO");
 			break;
+		case MACRO_HOSTNOTIFICATIONPERIOD:
+			*output = (char *)mkstr("%s", temp_host->notification_period);
+			break;
 		case MACRO_HOSTEVENTID:
 			*output = (char *)mkstr("%lu", temp_host->current_event_id);
 			break;
@@ -2117,6 +2122,9 @@ int grab_standard_service_macro_r(nagios_macros *mac, int macro_type, service *t
 			break;
 		case MACRO_SERVICENOTIFICATIONENABLED:
 			*output = (char *)mkstr("%s", temp_service->notifications_enabled ? "YES" : "NO");
+			break;
+		case MACRO_SERVICENOTIFICATIONPERIOD:
+			*output = (char *)mkstr("%s", temp_host->notification_period);
 			break;
 		case MACRO_SERVICEEVENTID:
 			*output = (char *)mkstr("%lu", temp_service->current_event_id);
@@ -2816,6 +2824,8 @@ int init_macrox_names(void) {
 	add_macrox_name(SERVICEINFOURL);
 	add_macrox_name(HOSTNOTIFICATIONENABLED);
 	add_macrox_name(SERVICENOTIFICATIONENABLED);
+	add_macrox_name(HOSTNOTIFICATIONPERIOD);
+	add_macrox_name(SERVICENOTIFICATIONPERIOD);
 
 	return OK;
 	}
