@@ -11,6 +11,7 @@ ENHANCEMENTS
 * CSV output based on groups (all options) (John Frickson)
 * New Macro(s) to generate URL for host / service object to be used in notifications (John Frickson)
 * New Macro(s) to determine if host/service notifications are enabled (#419) (Bryan Heden)
+* New Macro(s) for obtaining the host/service notification periods (#350) (Bryan Heden)
 * enable_page_tour interface option (Bryan Heden)
 * Code cleanups in important sections (Workers, Handling Results) (Bryan Heden)
 * Automatic mail program detection (with same /bin/mail failback) (Bryan Heden)
